# esp32-evse

./: sdkconfig.defaults
cfg/custom/: board.cfg
cfg/esp32devkitc/: board.cfg
cfg/esp32s2da/: board.cfg
cfg/oulware/: board.cfg
cfg/oulwarehandle/: board.cfg
cfg/oulwarewbox/: board.cfg
cfg/oulwarewbox2/: board.cfg
components/_mqtt/: CMakeLists.txt
components/_mqtt/include/: _mqtt.h
components/_mqtt/src/: _mqtt.c
components/aux_components/: CMakeLists.txt
components/aux_components/include/: power_outlet.h  tesla_button.h
components/aux_components/src/: power_outlet.c  tesla_button.c
components/config/include/: board_config.h
components/config/src/: board_config.c
components/evse/include/: evse.h
components/evse/src/: evse.c
components/network/: CMakeLists.txt
components/network/include/: wifi.h
components/network/src/: wifi.c
components/peripherals/: CMakeLists.txt
components/peripherals/include/: addressable_led.h  aux_relay.h  button.h  energy_meter.h  led.h  socket_lock.h  temp_sensor.h
components/peripherals/src/: adc.c  addressable_led.c  aux_io.c  aux_relay.c  button.c  energy_meter.c  led.c  proximity.c  rcm.c  socket_lock.c  temp_sensor.c
components/protocols/: CMakeLists.txt  web.cpio
components/protocols/src/: http_web.c  mqtt.c
components/protocols/tmp/assets/: index--F5cCZ7n.css  index-_7_vIY64.js  index.html
components/script/src/: l_evse_lib.c
main/: Kconfig.projbuild  main.c
web-installer/: index.html  wallbox.json
web-installer/firmware/: version.txt
